--- a/dev/tutorials/creating_ode/index.html
+++ b/dev/tutorials/creating_ode/index.html
@@ -30,7 +30,7 @@ y(t) = x1(t)
   chi1  =&gt; :nonidentifiable
   chi2  =&gt; :globally
   r1    =&gt; :globally
-  r2    =&gt; :globally</code></pre><h2 id="Defining-using-ModelingToolkit"><a class="docs-heading-anchor" href="#Defining-using-ModelingToolkit">Defining using <code>ModelingToolkit</code></a><a id="Defining-using-ModelingToolkit-1"></a><a class="docs-heading-anchor-permalink" href="#Defining-using-ModelingToolkit" title="Permalink"></a></h2><p><code>StructuralIdentifiability</code> has an extension <code>ModelingToolkitSIExt</code> which allows to use <code>System</code> from <code>ModelingToolkit</code> to describe a model. The extension is loaded automatically once <code>ModelingToolkit</code> is loaded via <code>using ModelingToolkit</code>. In this case, one should encode the equations for the states as <code>System</code> and specify the outputs separately. In order to do this, we first introduce all functions and scalars:</p><pre><code class="language-julia hljs">using StructuralIdentifiability, ModelingToolkit
+  r2    =&gt; :globally</code></pre><h2 id="Defining-using-ModelingToolkit"><a class="docs-heading-anchor" href="#Defining-using-ModelingToolkit">Defining using <code>ModelingToolkit</code></a><a id="Defining-using-ModelingToolkit-1"></a><a class="docs-heading-anchor-permalink" href="#Defining-using-ModelingToolkit" title="Permalink"></a></h2><p><code>StructuralIdentifiability</code> has an extension <code>ModelingToolkitSIExt</code> which allows to use <code>System</code> from <code>ModelingToolkit</code> to describe a model. The extension is loaded automatically once <code>ModelingToolkitBase</code> is loaded via <code>using ModelingToolkitBase</code>. In this case, one should encode the equations for the states as <code>System</code> and specify the outputs separately. In order to do this, we first introduce all functions and scalars:</p><pre><code class="language-julia hljs">using StructuralIdentifiability, ModelingToolkitBase
 
 @independent_variables t
 @parameters r1, r2, c1, c2, beta1, beta2, chi1, chi2
@@ -43,18 +43,26 @@ D = Differential(t)</code></pre><p>And then defined the system and separately th
 
 measured_quantities = [y ~ x1]
 
-ode_mtk = System(eqs, t, name = :mutualist)</code></pre><p class="math-container">\[ \begin{align}
-\frac{\mathrm{d} \mathtt{x1}\left( t \right)}{\mathrm{d}t} &amp;= u\left( t \right) + \frac{\mathtt{beta1} \mathtt{x1}\left( t \right) \mathtt{x2}\left( t \right)}{\mathtt{chi1} + \mathtt{x2}\left( t \right)} + \left( 1 - \mathtt{c1} \mathtt{x1}\left( t \right) \right) \mathtt{r1} \mathtt{x1}\left( t \right) \\
-\frac{\mathrm{d} \mathtt{x2}\left( t \right)}{\mathrm{d}t} &amp;= \frac{\mathtt{beta2} \mathtt{x1}\left( t \right) \mathtt{x2}\left( t \right)}{\mathtt{chi2} + \mathtt{x1}\left( t \right)} + \left( 1 - \mathtt{c2} \mathtt{x2}\left( t \right) \right) \mathtt{r2} \mathtt{x2}\left( t \right)
-\end{align}
- \]</p><p>Then, for example, the identifiability of parameters and states can be assessed as follows:</p><pre><code class="language-julia hljs">assess_identifiability(ode_mtk, measured_quantities = measured_quantities)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">OrderedCollections.OrderedDict{SymbolicUtils.BasicSymbolic{Real}, Symbol} with 10 entries:
+ode_mtk = System(eqs, t, name = :mutualist)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi"><span class="sgr1">Model mutualist:</span>
+<span class="sgr1">Equations (2):</span>
+  2 standard: see equations(mutualist)
+<span class="sgr1">Unknowns (3):</span> see unknowns(mutualist)
+  x1(t)
+  x2(t)
+  u(t)
+<span class="sgr1">Parameters (8):</span> see parameters(mutualist)
+  c1
+  r1
+  beta1
+  chi1
+  ⋮</code></pre><p>Then, for example, the identifiability of parameters and states can be assessed as follows:</p><pre><code class="language-julia hljs">assess_identifiability(ode_mtk, measured_quantities = measured_quantities)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">OrderedCollections.OrderedDict{SymbolicUtils.BasicSymbolicImpl.var&quot;typeof(BasicSymbolicImpl)&quot;{SymbolicUtils.SymReal}, Symbol} with 10 entries:
   x1(t) =&gt; :globally
   x2(t) =&gt; :nonidentifiable
-  c2    =&gt; :nonidentifiable
-  chi1  =&gt; :nonidentifiable
-  r1    =&gt; :globally
-  chi2  =&gt; :globally
-  beta1 =&gt; :globally
   c1    =&gt; :globally
+  r1    =&gt; :globally
+  beta1 =&gt; :globally
+  chi1  =&gt; :nonidentifiable
+  r2    =&gt; :globally
+  c2    =&gt; :nonidentifiable
   beta2 =&gt; :globally
-  r2    =&gt; :globally</code></pre><section class="footnotes is-size-7"><ul><li class="footnote" id="footnote-1"><a class="tag is-link" href="#citeref-1">1</a><blockquote><p>D. H. Wright, <a href="https://doi.org/10.1086/285003"><em>A Simple, Stable Model of Mutualism Incorporating Handling Time</em></a>, The American Naturalist, 1989, 134(4).</p></blockquote></li></ul></section></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../../">« Home</a><a class="docs-footer-nextpage" href="../identifiability/">Identifiability of Differential Models (Local and Global) »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.16.1 on <span class="colophon-date" title="Saturday 13 December 2025 15:11">Saturday 13 December 2025</span>. Using Julia version 1.12.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+  chi2  =&gt; :globally</code></pre><section class="footnotes is-size-7"><ul><li class="footnote" id="footnote-1"><a class="tag is-link" href="#citeref-1">1</a><blockquote><p>D. H. Wright, <a href="https://doi.org/10.1086/285003"><em>A Simple, Stable Model of Mutualism Incorporating Handling Time</em></a>, The American Naturalist, 1989, 134(4).</p></blockquote></li></ul></section></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../../">« Home</a><a class="docs-footer-nextpage" href="../identifiability/">Identifiability of Differential Models (Local and Global) »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.16.1 on <span class="colophon-date" title="Wednesday 17 December 2025 16:23">Wednesday 17 December 2025</span>. Using Julia version 1.12.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
