--- a/dev/index.html
+++ b/dev/index.html
@@ -9,14 +9,14 @@ Pkg.add(&quot;StructuralIdentifiability&quot;)</code></pre><h2 id="Citation"><a 
   title   = {Differential Elimination for Dynamical Models via Projections with Applications to Structural Identifiability},
   journal = {SIAM Journal on Applied Algebra and Geometry},
   url     = {https://doi.org/10.1137/22M1469067},
-  year    = {2023}
+  year    = {2023},
   volume  = {7},
   number  = {1},
   pages   = {194-235}
 }</code></pre><h2 id="Feature-Summary"><a class="docs-heading-anchor" href="#Feature-Summary">Feature Summary</a><a id="Feature-Summary-1"></a><a class="docs-heading-anchor-permalink" href="#Feature-Summary" title="Permalink"></a></h2><p><code>StructuralIdentifiability.jl</code> can assess local and global identifiability of ODE models. In addition to these straightforward identifiability queries on individual parameters, the package can distinguish between single- and multi-experiment identifiability.</p><h2 id="Feature-List"><a class="docs-heading-anchor" href="#Feature-List">Feature List</a><a id="Feature-List-1"></a><a class="docs-heading-anchor-permalink" href="#Feature-List" title="Permalink"></a></h2><ul><li>Local identifiability checks</li><li>Global identifiability checks</li><li>Assessment of identifiable functions of parameters and states</li><li>Model reparametrization (experimental)</li></ul><h2 id="External-tutorials"><a class="docs-heading-anchor" href="#External-tutorials">External tutorials</a><a id="External-tutorials-1"></a><a class="docs-heading-anchor-permalink" href="#External-tutorials" title="Permalink"></a></h2><p>A <a href="https://arxiv.org/abs/2505.10517">tutorial paper</a> describes some of the functionality (identifiability assessment and finding identifiable functions) in the context of epidemiological modeling (tested with the version 0.5.15 of the package).</p><h2 id="Contributing"><a class="docs-heading-anchor" href="#Contributing">Contributing</a><a id="Contributing-1"></a><a class="docs-heading-anchor-permalink" href="#Contributing" title="Permalink"></a></h2><ul><li><p>Please refer to the <a href="https://github.com/SciML/ColPrac/blob/master/README.md">SciML ColPrac: Contributor&#39;s Guide on Collaborative Practices for Community Packages</a> for guidance on PRs, issues, and other matters relating to contributing to StructuralIdentifiability.</p></li><li><p>There are a few community forums:</p><ul><li>The #diffeq-bridged channel in the <a href="https://julialang.org/slack/">Julia Slack</a></li><li><a href="https://gitter.im/JuliaDiffEq/Lobby">JuliaDiffEq</a> on Gitter</li><li>On the Julia Discourse forums</li><li>See also <a href="https://sciml.ai/community/">SciML Community page</a></li></ul></li></ul><h2 id="Reproducibility"><a class="docs-heading-anchor" href="#Reproducibility">Reproducibility</a><a id="Reproducibility-1"></a><a class="docs-heading-anchor-permalink" href="#Reproducibility" title="Permalink"></a></h2><details><summary>The documentation of this SciML package was built using these direct dependencies,</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl/docs/Project.toml`
   [6e4b80f9] BenchmarkTools v1.6.3
   [e30172f5] Documenter v1.16.1
-  [7771a370] ModelingToolkitBase v1.2.0
+  [7771a370] ModelingToolkitBase v1.3.0
   [220ca800] StructuralIdentifiability v0.5.18 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`</code></pre></details><details><summary>and using this machine and Julia version.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Julia Version 1.12.3
 Commit 966d0af0fdf (2025-12-15 11:20 UTC)
 Build Info:
@@ -28,7 +28,7 @@ Platform Info:
   LLVM: libLLVM-18.1.7 (ORCJIT, znver3)
   GC: Built with stock GC
 Threads: 1 default, 1 interactive, 1 GC (on 4 virtual cores)</code></pre></details><details><summary>A more complete overview of all dependencies and their versions is also provided.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl/docs/Manifest.toml`
-  [47edcb42] ADTypes v1.20.0
+  [47edcb42] ADTypes v1.21.0
   [a4c015fc] ANSIColoredPrinters v0.0.1
   [c3fe647b] AbstractAlgebra v0.47.6
   [6e696c72] AbstractPlutoDingetjes v1.3.2
@@ -41,15 +41,15 @@ Threads: 1 default, 1 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [a9b6321e] Atomix v1.1.2
   [6e4b80f9] BenchmarkTools v1.6.3
   [e2ed5e7c] Bijections v0.2.2
-  [caf10ac8] BipartiteGraphs v0.1.4
+  [caf10ac8] BipartiteGraphs v0.1.5
   [62783981] BitTwiddlingConvenienceFunctions v0.1.6
   [8e7c35d0] BlockArrays v1.9.3
-  [70df07ce] BracketingNonlinearSolve v1.6.0
+  [70df07ce] BracketingNonlinearSolve v1.6.1
   [2a0fbf3d] CPUSummary v0.2.7
   [fb6a15b2] CloseOpenIntervals v0.1.13
   [944b1d66] CodecZlib v0.7.8
 ⌅ [861a8166] Combinatorics v1.0.2
-  [38540f10] CommonSolve v0.2.4
+  [38540f10] CommonSolve v0.2.6
   [bbf7d656] CommonSubexpressions v0.3.1
   [f70d9fcc] CommonWorldInvalidations v1.0.0
   [34da2185] Compat v4.18.1
@@ -59,11 +59,11 @@ Threads: 1 default, 1 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [187b0558] ConstructionBase v1.6.0
   [adafc99b] CpuId v0.3.1
   [864edb3b] DataStructures v0.19.3
-  [2b5f629d] DiffEqBase v6.192.0
-  [459566f4] DiffEqCallbacks v4.10.1
+  [2b5f629d] DiffEqBase v6.194.0
+  [459566f4] DiffEqCallbacks v4.11.0
   [163ba53b] DiffResults v1.1.0
   [b552c78f] DiffRules v1.15.1
-  [a0c0ee7d] DifferentiationInterface v0.7.12
+  [a0c0ee7d] DifferentiationInterface v0.7.13
   [ffbed154] DocStringExtensions v0.9.5
   [e30172f5] Documenter v1.16.1
   [5b8099bc] DomainSets v0.7.16
@@ -74,11 +74,11 @@ Threads: 1 default, 1 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [55351af7] ExproniconLite v0.10.14
   [7034ab61] FastBroadcast v0.3.5
   [9aa1b823] FastClosures v0.3.2
-  [a4df4552] FastPower v1.2.0
+  [a4df4552] FastPower v1.3.0
   [1a297f60] FillArrays v1.15.0
-  [64ca27bc] FindFirstFunctions v1.4.2
+  [64ca27bc] FindFirstFunctions v1.6.0
   [6a86dc24] FiniteDiff v2.29.0
-  [f6369f11] ForwardDiff v1.3.0
+  [f6369f11] ForwardDiff v1.3.1
   [069b7b12] FunctionWrappers v1.1.3
   [77dc65aa] FunctionWrappersWrappers v0.1.3
   [46192b85] GPUArraysCore v0.2.0
@@ -87,7 +87,7 @@ Threads: 1 default, 1 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [0b43b601] Groebner v0.10.1
   [b5f81e59] IOCapture v1.0.0
   [615f187c] IfElse v0.1.1
-⌃ [3263718b] ImplicitDiscreteSolve v1.2.0
+  [3263718b] ImplicitDiscreteSolve v1.5.0
   [d25df0c9] Inflate v0.1.5
   [18e54dd8] IntegerMathUtils v0.1.3
   [8197267c] IntervalSets v0.7.13
@@ -101,32 +101,32 @@ Threads: 1 default, 1 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [ccbc3e58] JumpProcesses v9.19.3
   [10f19ff3] LayoutPointers v0.1.17
   [0e77f7df] LazilyInitializedFields v1.3.0
-  [87fe0de2] LineSearch v0.1.4
+  [87fe0de2] LineSearch v0.1.5
   [2ab3a3ac] LogExpFunctions v0.3.29
   [e6f89c97] LoggingExtras v1.2.0
   [1914dd2f] MacroTools v0.5.16
   [d125e4d3] ManualMemory v0.1.8
   [d0879d2d] MarkdownAST v0.1.2
   [bb5d69b7] MaybeInplace v0.1.4
-  [7771a370] ModelingToolkitBase v1.2.0
+  [7771a370] ModelingToolkitBase v1.3.0
   [2e0e35c7] Moshi v0.3.7
   [46d2c3a1] MuladdMacro v0.2.4
   [102ac46a] MultivariatePolynomials v0.5.13
   [d8a4904e] MutableArithmetics v1.6.7
   [77ba4419] NaNMath v1.1.3
 ⌅ [2edaba10] Nemo v0.52.4
-  [be0214bd] NonlinearSolveBase v2.5.1
+  [be0214bd] NonlinearSolveBase v2.9.0
   [6fe1bfb0] OffsetArrays v1.17.0
   [bac558e1] OrderedCollections v1.8.1
-⌅ [bbf590c4] OrdinaryDiffEqCore v1.36.0
+  [bbf590c4] OrdinaryDiffEqCore v2.3.0
   [3e851597] ParamPunPam v0.5.6
   [69de0a69] Parsers v2.8.3
   [e409e4f3] PoissonRandom v0.4.7
   [f517fe37] Polyester v0.7.18
   [1d0040c9] PolyesterWeave v0.2.2
-  [d236fae5] PreallocationTools v0.4.34
+⌅ [d236fae5] PreallocationTools v0.4.34
   [aea7be01] PrecompileTools v1.3.3
-  [21216c6a] Preferences v1.5.0
+  [21216c6a] Preferences v1.5.1
   [27ebfcd6] Primes v0.5.7
   [92933f4c] ProgressMeter v1.11.0
   [fb686558] RandomExtensions v0.4.4
@@ -134,35 +134,34 @@ Threads: 1 default, 1 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [988b38a3] ReadOnlyArrays v0.2.0
   [795d4caa] ReadOnlyDicts v1.0.0
   [3cdcf5f2] RecipesBase v1.3.4
-  [731186ca] RecursiveArrayTools v3.41.0
+  [731186ca] RecursiveArrayTools v3.42.1
   [189a3867] Reexport v1.2.2
   [2792f1a3] RegistryInstances v0.1.0
   [ae029012] Requires v1.3.1
   [7e49a35a] RuntimeGeneratedFunctions v0.5.16
   [94e857df] SIMDTypes v0.1.0
-  [0bca4576] SciMLBase v2.128.0
-  [19f34311] SciMLJacobianOperators v0.1.11
-  [a6db7da4] SciMLLogging v1.7.1
+  [0bca4576] SciMLBase v2.131.0
+  [19f34311] SciMLJacobianOperators v0.1.12
+  [a6db7da4] SciMLLogging v1.8.0
   [c0aeaf25] SciMLOperators v1.14.1
-  [431bcebd] SciMLPublic v1.0.0
-  [53ae85a6] SciMLStructures v1.7.0
+  [431bcebd] SciMLPublic v1.0.1
+  [53ae85a6] SciMLStructures v1.9.0
   [efcf1570] Setfield v1.1.2
-  [727e6d20] SimpleNonlinearSolve v2.9.0
+  [727e6d20] SimpleNonlinearSolve v2.10.0
   [699a6c99] SimpleTraits v0.9.5
-  [ce78b400] SimpleUnPack v1.1.0
   [276daf66] SpecialFunctions v2.6.1
   [aedffcd0] Static v1.3.1
   [0d7ed370] StaticArrayInterface v1.8.0
-  [90137ffa] StaticArrays v1.9.15
+  [90137ffa] StaticArrays v1.9.16
   [1e83bf80] StaticArraysCore v1.4.4
   [10745b16] Statistics v1.11.1
   [7792a7ef] StrideArraysCore v0.5.8
   [ec057cc2] StructUtils v2.6.0
   [220ca800] StructuralIdentifiability v0.5.18 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`
   [2efcf032] SymbolicIndexingInterface v0.3.46
-  [19f23fe9] SymbolicLimits v0.2.4
-  [d1185830] SymbolicUtils v4.9.1
-  [0c5d862f] Symbolics v7.2.0
+⌅ [19f23fe9] SymbolicLimits v0.2.4
+  [d1185830] SymbolicUtils v4.10.0
+  [0c5d862f] Symbolics v7.4.1
   [ed4db957] TaskLocalValues v0.1.3
   [8ea1fca8] TermInterface v2.0.0
   [8290d209] ThreadingUtilities v0.5.5
@@ -228,6 +227,6 @@ Threads: 1 default, 1 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [8e850b90] libblastrampoline_jll v5.15.0+0
   [8e850ede] nghttp2_jll v1.64.0+1
   [3f19e933] p7zip_jll v17.7.0+0
-Info Packages marked with ⌃ and ⌅ have new versions available. Those with ⌃ may be upgradable, but those with ⌅ are restricted by compatibility constraints from upgrading. To see why use `status --outdated -m`</code></pre></details>You can also download the 
+Info Packages marked with ⌅ have new versions available but compatibility constraints restrict them from upgrading. To see why use `status --outdated -m`</code></pre></details>You can also download the 
 <a href="">manifest</a> file and the
-<a href="">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/creating_ode/">Creating ODE System »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.16.1 on <span class="colophon-date" title="Thursday 18 December 2025 14:59">Thursday 18 December 2025</span>. Using Julia version 1.12.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+<a href="">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/creating_ode/">Creating ODE System »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.16.1 on <span class="colophon-date" title="Tuesday 30 December 2025 19:25">Tuesday 30 December 2025</span>. Using Julia version 1.12.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
